--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -50,11 +50,11 @@
                             </label>
                         </div>
                         
-                        <div class="text-sm">
+                        <!-- <div class="text-sm">
                             <a href="#" class="text-sm text-blue-400 hover:text-blue-300 transition-colors">
                                 Esqueceu sua senha?
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                     
                     <button type="submit"
