--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Projeto Basquete{% endblock %}</title>
-
+    <link rel="icon" href="{{ url_for('static', filename='images/icon.png') }}" type="image/png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -88,9 +88,9 @@
 </head>
 <body class="min-h-screen flex flex-col transition-colors duration-300 bg-gradient-to-b from-bgcolordark to-bgcolorligth">
     {% if not hide_nav|default(False) %}
-    <nav class="backdrop-blur-md bg-[rgba(225,225,225,0.07)] text-white px-6 py-4 shadow-md">
+    <nav class="backdrop-blur-md bg-[rgba(225,225,225,0.07)] text-white px-10 py-4 shadow-md">
         <div class="w-full mx-auto flex justify-between items-center">
-            <h1 class="text-3xl font-bold text-white ml-3">🏀 BasketStats</h1>
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="h-10 w-auto">
             <div class="w-7/12 flex justify-around items-center text-2xl font-semibold">
                 <a href="{{ url_for('main.home') }}" class="hover:text-blue-400 transition flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-3">
